# rust-stm32f4-blinky

./: Cargo.toml  memory.x
src/: main.rs
